src/styles.css
/* Importing Fonts */
@import url('https://fonts.googleapis.com/css2?family=Inter:ital,wght@0,300;0,400;0,600;0,700;1,400;1,600;1,700&display=swap');

/* Variables */
:root {
    --green: #0A574E;
    --dark-mode-green: #0cad9b;
    --dark-teal: #14B8A6;
    --light-teal: #1AFFE4;
    --gray: #E6E6E6;
    --dark: #292929;
  }

/* Tailwind CSS */
@tailwind base;
@tailwind components;
@tailwind utilities;


body {
    font-family: "Inter", sans-serif;
    color: var(--dark);
    background: url(../images/hello-agent-bg.png) no-repeat bottom right;
    background-size: 36%;
}


/* Resuable Classes */
.bg-gray {
    background-color: var(--gray);
}

.border-gray {
    border-color: var(--gray);
}

.bg-primary {
    background-color: var(--green);
}

.border-primary {
    border-color: var(--green);
}

.text-primary {
    color: var(--green);
}

.bg-secondary {
    background-color: var(--dark-teal);
}

.border-secondary {
    border-color: var(--dark-teal);
}

.text-secondary {
    color: var(--dark-teal);
}

.bg-tertiary {
    background-color: var(--light-teal);
}

.border-tertiary {
    border-color: var(--light-teal);
}

.text-tertiary {
    color: var(--light-teal);
}

.text-dark {
    color: var(--dark);
}

.rounded-s-none {
    border-top-left-radius: 0 !important;
    border-bottom-left-radius: 0 !important;
}

.rounded-e-none {
    border-top-right-radius: 0 !important;
    border-bottom-right-radius: 0 !important;
}

.profile-card:hover h2 {
    color: #fff;
}

.colls:hover p {
    color: #fff;
} 

.colls:hover h2 {
    color: var(--light-teal);
} 


.sidebar--collapsed .sidebar__menu-text {
    padding: 0;
}

.sidebar--collapsed .theme-toggle__item:not(.theme-toggle__active), .sidebar--collapsed #settingsSubmenu {
    display: none;
}

.theme-toggle__active img {
    filter: brightness(0) invert(1);
}

.faq-toggle--active .faq-icon {
    transform: rotate(180deg);
}


/* Dark Mode */
.dark body {
    background: #1A1A1A;
    color: #fff;
}

.dark .bg-gray {
    background-color: rgba(255, 255, 255, 0.06);
}

.dark .text-dark, .dark .text-black {
    color: #fff;
}

.dark .bg-white {
    background-color: #202020;
}

.dark .text-primary {
    color: var(--dark-mode-green);
}

.dark .border-primary {
    border-color: var(--dark-mode-green);
}

.dark .bg-primary {
    background-color: var(--dark-mode-green);
}

.dark .eco-box.bg-gray {
    background-color: #fff
}

.dark #sidebar svg path {
    fill: #fff;
}

.dark .hover\:bg-gray-100:hover, .dark .bg-gray-100 {
    background-color: rgba(0, 0, 0, 0.1);
}

.dark .bg-\[\#F8F8F8\] {
    background-color: rgba(255, 255, 255, 0.03);
}

.dark td, .dark th, .dark tr {
    border: 0 !important;
}


/* Media Queries */
@media (min-width: 1200px) {
    body {
        background-attachment: fixed;
    }
}

@media (min-width: 1900px) {
    #sidebar {
        width: 20rem;
    }
    #sidebar.w-16 {
        width: 4rem;
    }
}

